Fix fieldset width on small device

--- a/style/bootstrap_extra.css
+++ b/style/bootstrap_extra.css
@@ -19,7 +19,7 @@ fieldset {
 }
 
 fieldset fieldset {
-    min-width:400px;
+    min-width:470px;
     width:32%;  
     display:inline-block;
     vertical-align:top;
